simple-node-app/kubia-replicaset-matchexpressions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
  labels:
    app: kubia
spec:
  replicas: 3 
  selector:
      matchExpressions:
        - key: app
          operator: In
          values:
            - kubia
  template:
    metadata:
      labels:
        app: kubia
    spec:
      containers:
        - image: ralitong/kubia
          name: kubia
          ports:
            - containerPort: 8080
              protocol: TCP
