simple-node-app/kubia-svc-sessionaffinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc-session-affinity
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 9000
      targetPort: 8080
  selector:
    app: kubia
